--- a/config.toml
+++ b/config.toml
@@ -5,11 +5,7 @@ theme = 'hugo-theme-console'
 
 [params]
   # Cutting off the page title to two chars for mobile (console-demo -> co)
-  titleCutting = true
-
-  # Set the animation style -- https://animate.style/
-  # To disable animations, please remove or comment animationStyle parameter
-  animateStyle = 'animated zoomIn fast' 
+  titleCutting = false
 
   [[params.navlinks]]
   name = 'about/'
